# Hamming-Code-Implementation

./: CMakeLists.txt  README.md  errors.h  hamming_code.h  main.cpp  utils.h
include/: errors.hpp  hamming_code.hpp  utils.hpp
src/: main.cpp
